feat: add job apis
